# pallet-teerex

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
host-calls/: Cargo.toml
host-calls/src/: remote_attestation.rs
ias-verify/: Cargo.toml
ias-verify/src/: ephemeral_key.rs  lib.rs  netscape_comment.rs  tests.rs  utils.rs
scripts/: benchmark_teerex_full_info.sh
src/: benchmarking.rs  lib.rs  mock.rs  test_utils.rs  tests.rs  weights.rs
src/tests/: skip_ias_check_tests.rs  tests.rs
