[package]
name = "pallet-substratee-registry"
version = "0.6.14"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[workspace]
members = [
    'ias-verify',
]

[dependencies]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.ias-verify]
default-features = false
path = './ias-verify'

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.frame-system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.timestamp]
default-features = false
package = "pallet-timestamp"
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dev-dependencies]
hex-literal = "*"
env_logger = "0.7.1"
log = "*"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dev-dependencies.externalities]
package = "sp-externalities"
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dev-dependencies.balances]
package = "pallet-balances"
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'ias-verify/std',
    'sp-std/std',    
    'sp-io/std',
    'sp-core/std',
    'timestamp/std'
]
