[package]
name = "pallet-substratee-registry"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[workspace]
members = [
    'ias-verify',
]

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.101' }
log = { version = "0.4.14", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.ias-verify]
default-features = false
path = './ias-verify'

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.timestamp]
default-features = false
package = "pallet-timestamp"
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies]
hex-literal = "*"
env_logger = "0.7.1"
log = "*"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies.externalities]
package = "sp-externalities"
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate.git"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'ias-verify/std',
    'sp-std/std',
    'sp-io/std',
    'sp-core/std',
    'timestamp/std'
]
