[package]
name = "ias-verify"
version = "0.1.2"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
base64 = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"
features = ["disable_panic_handler", "disable_oom"]

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
rev = "a208da16"

[dependencies.webpki]
git = 'https://github.com/scs/webpki-nostd.git'
tag = "v0.21.0-nostd"
default_features = false

[dev-dependencies]
hex-literal = "*"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'sp-std/std',
    'sp-io/std',
    'serde_json/std',
    'webpki/std',
]