[package]
name = "ias-verify"
version = "0.1.4"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
base64 = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.6'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
branch = "rococo-v1"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
branch = "rococo-v1"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
branch = "rococo-v1"
#features = ["disable_panic_handler", "disable_oom"]

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git" 
branch = "rococo-v1"

[dependencies.webpki]
git = 'https://github.com/briansmith/webpki.git'
rev = "9cf9f45"
default_features = false
#features = ["alloc"]

[dev-dependencies]
hex-literal = "*"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'sp-std/std',
    'sp-io/std',
    'serde_json/std',
    'webpki/std',
]